모임 수정 작업
